Hanimi Org/src/objects/Out_Of_Office__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_Of_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Out Of Office</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Out Of Office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time__c &lt;=  Start_Time__c</errorConditionFormula>
        <errorMessage>End Time has to be after Start Time</errorMessage>
    </validationRules>
</CustomObject>